Minor changes to the little prince

--- a/little_prince.css
+++ b/little_prince.css
@@ -1,13 +1,14 @@
 span.underline {
     text-decoration: underline ;
 }
-span.orangeback {
-    color: darkorange;
-}
 span.red {
     color: red;
     font-weight: bold;
 }
+span.orange-back {
+    color: darkorange;
+}
+
 
 
 
